--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,18 @@
 {
   "builds": [
     {
-      "src": "build/web/**",
+      "src": "public/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
+      "src": "/service-worker.js",
+      "headers": { "Cache-Control": "no-cache" }
+    },
+    {
       "src": "/(.*)",
-      "dest": "/build/web/index.html"
+      "dest": "/index.html"
     }
   ]
 }
