--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,18 @@
   ],
   "routes": [
     {
+      "src": "/manifest.json",
+      "dest": "/manifest.json",
+      "headers": { "Cache-Control": "public, max-age=3600, must-revalidate" }
+    },
+    {
       "src": "/flutter.js",
+      "dest": "/flutter.js",
+      "headers": { "Cache-Control": "public, max-age=31536000, immutable" }
+    },
+    {
+      "src": "/main.dart.js",
+      "dest": "/main.dart.js",
       "headers": { "Cache-Control": "public, max-age=31536000, immutable" }
     },
     {
