--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,43 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "build.sh",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "public" }
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
     }
   ],
   "routes": [
     {
       "src": "/manifest.json",
       "dest": "/manifest.json",
-      "headers": { "Cache-Control": "public, max-age=3600, must-revalidate" }
+      "headers": {
+        "Cache-Control": "public, max-age=3600, must-revalidate"
+      }
     },
     {
       "src": "/flutter.js",
       "dest": "/flutter.js",
-      "headers": { "Cache-Control": "public, max-age=31536000, immutable" }
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "/main.dart.js",
       "dest": "/main.dart.js",
-      "headers": { "Cache-Control": "public, max-age=31536000, immutable" }
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "/(.*)",
       "dest": "/index.html",
-      "headers": { "Cache-Control": "public, max-age=0, must-revalidate" }
+      "headers": {
+        "Cache-Control": "public, max-age=0, must-revalidate"
+      }
     }
-  ]
+  ],
+  "env": {
+    "FLUTTER_VERSION": "3.29.0",
+    "NODE_ENV": "production"
+  }
 }
