--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,29 @@
   "public": "build/web",
   "routes": [
     {
+      "src": "/FontManifest.json",
+      "dest": "/FontManifest.json",
+      "headers": {
+        "Content-Type": "application/json",
+        "Cache-Control": "public, max-age=3600, must-revalidate"
+      }
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/manifest.json",
+      "headers": {
+        "Content-Type": "application/json",
+        "Cache-Control": "public, max-age=3600, must-revalidate"
+      }
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=86400, must-revalidate"
+      }
+    },
+    {
       "src": "/flutter_service_worker.js",
       "dest": "/flutter_service_worker.js",
       "headers": {
@@ -32,14 +55,6 @@
       "headers": {
         "Content-Type": "application/javascript",
         "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/manifest.json",
-      "dest": "/manifest.json",
-      "headers": {
-        "Content-Type": "application/json",
-        "Cache-Control": "public, max-age=3600, must-revalidate"
       }
     },
     {
